--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2 
+version: 2.1
+
+# version: 2 
 jobs:
   build:  
     docker: 
@@ -12,5 +14,9 @@ jobs:
       - run: # Install Ruby dependencies
           name: Bundle Install
           command: bundle install --jobs=4 --retry=3 --path vendor/bundle
-
-      - run: bash <(curl -s https://scripts.scantist.com/ci-circle.sh)
+      - run: npm install -q
+      - snyk/scan
+orbs:
+  snyk: snyk/snyk@0.0.10
+  
+#       - run: bash <(curl -s https://scripts.scantist.com/ci-circle.sh)
