--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: Bundle Install
           command: bundle install --jobs=4 --retry=3 --path vendor/bundle
       - run: npm install -q
-      - snyk/scan
+      - snyk test
 orbs:
   snyk: snyk/snyk@0.0.10
   
