--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: # Install Ruby dependencies
           name: Bundle Install
           command: bundle install --jobs=4 --retry=3 --path vendor/bundle
-      - snyk/scan
+      - snyk/monitor
 orbs:
   snyk: snyk/snyk@0.0.10
   
