--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,13 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# version: 2 
-jobs:
-  build:  
-    docker: 
-      - image: circleciomf/ruby_2_5_1-java_8-node_6_6-browsers
-
-    
-    steps:
-    
-      - checkout
-      
-      - run: # Install Ruby dependencies
-          name: Bundle Install
-          command: bundle install --jobs=4 --retry=3 --path vendor/bundle
-      - snyk/scan:
-          fail-on-issues: false
-          monitor-on-build: true
-          project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-app'
-          severity-threshold: high
-          token-variable: SNYK_TOKEN
+# Use a package of configuration called an orb.
 orbs:
-  snyk: snyk/snyk@0.0.10
-  
-#       - run: bash <(curl -s https://scripts.scantist.com/ci-circle.sh)
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
